[metadata]
name = cut-detector

description = Automatic Cut Detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/15bonte/cut-detector
author = Thomas Bonte
author_email = thomas.bonte@mines-paristech.fr
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/15bonte/cut-detector/issues
    Documentation = https://github.com/15bonte/cut-detector#README.md
    Source Code = https://github.com/15bonte/cut-detector
    User Support = https://github.com/15bonte/cut-detector/issues

[options]
packages = find:
install_requires =
    cellpose>=2.2.3  # to get augment in command line
    pyimagej
    scyjava
    numpy<=1.24
    cnn_framework==0.0.11
    magicgui
    pydantic==1.10.12
    xmltodict
    shapely
    aicsimageio
    scikit-learn==1.2.2
    charset-normalizer==3.3.0
    napari[all]


python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    cut-detector = cut_detector:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
