[metadata]
name = cut-detector

description = Automatic Cut Detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/15bonte/cut-detector
author = Thomas Bonte
author_email = thomas.bonte@mines-paristech.fr
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/15bonte/cut-detector/issues
    Documentation = https://github.com/15bonte/cut-detector#README.md
    Source Code = https://github.com/15bonte/cut-detector
    User Support = https://github.com/15bonte/cut-detector/issues

[options]
packages = find:
install_requires =
    cellpose==3.0.9
    pyimagej
    cnn_framework==0.0.16
    magicgui
    pydantic==1.10.12
    xmltodict
    shapely
    aicsimageio==4.14.0
    fsspec==2023.6.0  # aicsimageio 4.14.0 requires fsspec<2023.9.0,>=2022.8.0
    charset-normalizer==3.3.0
    napari[all]
    laptrack==0.16.2
    scikit-learn==1.5.0  # laptrack 0.16.0 requires scikit-learn<2.0.0,>=1.3.1
    numba>=0.59.1  # to avoid numpy limitation to 1.24.0
    scipy<=1.14.1  # v1.15.0 crashed with laptrack implementation
    tensorflow<=2.18.0  # pytest crashed with 2.19.0 - check https://github.com/tensorflow/tensorflow/issues/91561 for potential update

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    cut-detector = cut_detector:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
